FEAT: implement for endpoint register
